--- a/src/app/common/component/sidebar/sidebar.component.html
+++ b/src/app/common/component/sidebar/sidebar.component.html
@@ -1,8 +1,10 @@
 <mat-sidenav-container class="example-container" fullscreen>
-    <mat-sidenav mode="side" opened="true" [fixedInViewport]="true" [fixedTopGap]="50" class="list-whidth">
-        <mat-nav-list>
-            <mat-list-item *ngFor="let link of links" [routerLink]="link.routerLink">{{link.label}}</mat-list-item>
-        </mat-nav-list>
-    </mat-sidenav>
-    <mat-sidenav-content><ng-content/></mat-sidenav-content>
+  <mat-sidenav mode="side" opened="true" [fixedInViewport]="true" [fixedTopGap]="50" class="list-whidth">
+    <mat-nav-list>
+      @for (link of links; track link) {
+        <mat-list-item [routerLink]="link.routerLink">{{link.label}}</mat-list-item>
+      }
+    </mat-nav-list>
+  </mat-sidenav>
+  <mat-sidenav-content><ng-content/></mat-sidenav-content>
 </mat-sidenav-container>
